monitoring/services/phppgadmin/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: phppgadmin-deployment
  namespace: monitoring
  labels:
    app: phppgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phppgadmin
  template:
    metadata:
      labels:
        app: phppgadmin
    spec:
      containers:
      - name: phppgadmin
        image: dockage/phppgadmin:latest
        ports:
        - containerPort: 80
