monitoring/services/phppgadmin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: phppgadmin-service
  namespace: monitoring
  labels:
    app: phppgadmin
spec:
  ports:
  - port: 80
  selector:
    app: phppgadmin
